# sendai_ros2

./: Readme.md  package.xml  setup.cfg  setup.py
config/: rogilingflex.json
omni_robot_controller/: robot_control_node.py
resource/: omni_robot_controller
test/: test_ball_selection.py  test_kinematics.py  test_line_logic.py
