<?xml version="1.0"?>
<package format="3">
  <name>omni_robot_controller</name>
  <version>0.0.0</version>
  <description>ROS2 package for controlling an omni-directional robot to follow lines and collect balls.</description>
  <maintainer email="todo@todo.todo">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_detector</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
